--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     tools:context="mittnerlab.runningprobe.MainActivity">
 
     <Button
-        android:text="Start Run!"
+        android:text="@string/start_run"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textview_running_time"
@@ -27,7 +27,7 @@
         android:tag="pause" />
 
     <Button
-        android:text="Finalize"
+        android:text="@string/finalize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/start_stop_button"
@@ -38,7 +38,7 @@
         android:enabled="false" />
 
     <TextView
-        android:text="Position: NA"
+        android:text="Posisjon: NA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/finalize_button"
@@ -47,7 +47,7 @@
         android:id="@+id/textview_latlon" />
 
     <TextView
-        android:text="Last update: NA"
+        android:text="Sist oppdatert: NA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textview_latlon_time"
@@ -79,11 +79,24 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="File: NA"
+        android:text="Fil: NA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/textview_filename" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textview_intensity_zone"
+        android:fontFamily="sans-serif"
+        android:textSize="40sp"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:layout_below="@+id/textview_running_time"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="41dp" />
 </RelativeLayout>
