--- a/app/src/main/res/layout/activity_thought_probe.xml
+++ b/app/src/main/res/layout/activity_thought_probe.xml
@@ -10,141 +10,175 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mittnerlab.runningprobe.ThoughtProbeActivity">
 
-    <TextView
-        android:text="@string/probe1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textview_instruction"
-        tools:text="@string/probe1" />
-
-    <TextView
-        android:text="@string/probe1_lower"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textview_probe1_lower" />
-
-    <SeekBar
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="5"
-        android:progress="0"
-        android:layout_below="@+id/textview_probe2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="23dp"
-        android:id="@+id/seekBar_probe2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:text="@string/probe1_upper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview_probe1_upper"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:text="@string/probe2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="61dp"
-        android:id="@+id/textview_probe2"
-        android:layout_below="@+id/textview_probe1_lower"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:layout_height="match_parent">
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout"
-        android:layout_below="@+id/textview_instruction"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp">
+        android:orientation="vertical">
 
-        <SeekBar
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
+
+        <!-- PROBE 1 -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:max="5"
-            android:progress="0"
-            android:layout_below="@+id/textview_instruction"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/seekBar_probe1" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/probe1"
+            android:paddingTop="10sp">
 
-    </LinearLayout>
+            <TextView
+                android:text="@string/probe1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/textview_instruction"
+                tools:text="@string/probe1" />
 
-    <TextView
-        android:text="@string/probe2_lower"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBar_probe2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textview_probe2_lower" />
+            <SeekBar
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:max="5"
+                android:progress="0"
+                android:layout_below="@+id/textview_instruction"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/seekBar_probe1" />
 
-    <TextView
-        android:text="@string/probe2_upper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/seekBar_probe2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_below="@+id/seekBar_probe1"
+                android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/probe1_lower"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/textview_probe1_lower" />
+
+            <TextView
+                android:text="@string/probe1_upper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview_probe1_upper"
+                android:layout_alignParentRight="true" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <!-- PROBE 2 -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/probe2"
+            android:layout_below="@+id/probe1"
+            android:paddingTop="10sp">
 
 
-    <TextView
-        android:text="@string/probe3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="61dp"
-        android:id="@+id/textview_probe3"
-        android:layout_below="@+id/textview_probe2_lower"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:text="@string/probe2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="61dp"
+                android:id="@+id/textview_probe2"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-    <SeekBar
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="5"
-        android:progress="0"
-        android:layout_below="@+id/textview_probe3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="23dp"
-        android:id="@+id/seekBar_probe3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+            <SeekBar
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="5"
+                android:progress="0"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="23dp"
+                android:id="@+id/seekBar_probe2"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:text="@string/probe3_lower"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBar_probe3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textview_probe3_lower" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_below="@+id/seekBar_probe2"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:text="@string/probe3_upper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview_probe3_upper"
-        android:layout_below="@+id/seekBar_probe3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+            <TextView
+                android:text="@string/probe2_lower"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/textview_probe2_lower" />
 
+            <TextView
+                android:text="@string/probe2_upper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5"
+                android:layout_alignParentRight="true" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+
+
+        <!-- PROBE 3 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/probe3"
+            android:layout_below="@+id/probe2"
+            android:paddingTop="10sp">
+
+            <TextView
+                android:text="@string/probe3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="61dp"
+                android:id="@+id/textview_probe3"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <SeekBar
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="5"
+                android:progress="0"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="23dp"
+                android:id="@+id/seekBar_probe3"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_below="@+id/seekBar_probe2"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="@string/probe3_lower"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:id="@+id/textview_probe3_lower" />
+
+                <TextView
+                    android:text="@string/probe3_upper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textview_probe3_upper"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
+        </LinearLayout>
 
     <Button
         android:text="OK"
@@ -157,4 +191,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="45dp" />
+
+
+    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
